Added navigation styling

--- a/css/index.css
+++ b/css/index.css
@@ -159,6 +159,10 @@ p {
   font-size: 1.6rem;
   padding-bottom: 10px;
 }
+a {
+  text-decoration: none;
+  font-size: 1.6rem;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -167,6 +171,19 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+nav {
+  margin: 30px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+nav div {
+  margin-right: auto;
+}
+nav a {
+  color: #212529;
+  padding: 0 20px;
 }
 .footer {
   width: 100%;
