--- a/less/global.less
+++ b/less/global.less
@@ -34,6 +34,11 @@ p {
   padding-bottom: 10px;
 }
 
+a {
+  text-decoration: none;
+  font-size: 1.6rem;
+}
+
 img {
   max-width: 100%;
   height: auto;
