--- a/less/index.less
+++ b/less/index.less
@@ -3,6 +3,6 @@
 @import 'mixins';
 @import 'reset';
 @import 'global';
-@import 'navigation';
+@import 'navigation.less';
 @import 'footer';
 @import 'home-page';
