--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,17 @@
 // Navigation Styles here
+
+nav {
+    margin: 30px 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    div {
+        margin-right: auto;
+    }
+
+    a {
+        color: @font-color;
+        padding: 0 20px;
+    }
+}
