--- a/css/index.css
+++ b/css/index.css
@@ -173,10 +173,11 @@ img {
   margin: 0 auto;
 }
 nav {
-  margin: 30px 0;
+  padding: 24px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  border-bottom: 2px dashed #C0C0C0;
 }
 nav div {
   margin-right: auto;
@@ -195,6 +196,12 @@ nav a {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home header {
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home header img {
+  padding-bottom: 30px;
 }
 .home .content-section {
   margin: 30px 0;
