--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,10 +1,11 @@
 // Navigation Styles here
 
 nav {
-    margin: 30px 0;
+    padding: 24px 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    border-bottom: 2px dashed @navigation-border;
 
     div {
         margin-right: auto;
