Added mixin for buttons -- need to check this

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -64,6 +64,13 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+       .button(@dark-green; @white; 15px; 15px);
+       font-size: 1.6rem;
+       max-width: 80%;
+       text-align: center;
+      }
     }
   }
 }// home
