--- a/css/index.css
+++ b/css/index.css
@@ -249,3 +249,12 @@ nav a {
   width: 30%;
   margin-bottom: 30px;
 }
+.home .content-pick .destination .btn {
+  background-color: #008080;
+  color: #FFFFFF;
+  padding: 15px;
+  border-radius: 15px;
+  font-size: 1.6rem;
+  max-width: 80%;
+  text-align: center;
+}
