--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,2 +1,8 @@
 // Mixins in here
 
+.button(@background-color; @color; @padding; @radius) {
+    background-color: @background-color;
+    color: @color;
+    padding: @padding;
+    border-radius: @radius;
+}
