--- a/css/index.css
+++ b/css/index.css
@@ -172,17 +172,44 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
+}
 nav {
+  border-bottom: 2px dashed #C0C0C0;
+}
+nav .nav-container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
   padding: 24px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  border-bottom: 2px dashed #C0C0C0;
 }
-nav div {
+@media (max-width: 500px) {
+  nav .nav-container {
+    flex-direction: column;
+    padding: 24px;
+  }
+}
+nav .nav-container .nav-title {
   margin-right: auto;
 }
-nav a {
+@media (max-width: 500px) {
+  nav .nav-container .nav-title {
+    margin: 0 auto;
+    padding-bottom: 15px;
+  }
+}
+@media (max-width: 500px) {
+  nav .nav-container .nav-title h1 {
+    font-size: 3rem;
+  }
+}
+nav .nav-container .nav-links a {
   color: #212529;
   padding: 0 20px;
 }
@@ -209,16 +236,37 @@ nav a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    text-align: center;
+  }
+}
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -232,9 +280,19 @@ nav a {
   padding-right: 1%;
   padding-left: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .img-content {
+    order: 1;
+  }
+}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -245,9 +303,22 @@ nav a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 20px;
+  }
 }
 .home .content-pick .destination .btn {
   background-color: #008080;
@@ -257,4 +328,12 @@ nav a {
   font-size: 1.6rem;
   max-width: 80%;
   text-align: center;
+  border: 1px solid #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    margin: 0 auto;
+    max-width: 100%;
+    background-color: #17A2B8;
+  }
 }
