--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,18 +15,31 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+    }
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile {
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile {
+        width: 100%;
+        text-align: center;
+      }
 
       img {
         border-radius: 10px;
+        @media @mobile {
+            width: 100%;
+        }
       }
     }
   }
@@ -43,12 +56,18 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+      @media @mobile {
+        order: 1;
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @mobile {
+      width: 100%;
+    }
 
     img {
       border-radius: 10px;
@@ -60,16 +79,31 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+      justify-content: center;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile {
+        width: 80%;
+        margin: 0 auto;
+        padding-bottom: 20px;
+      }
 
       .btn {
        .button(@dark-green; @white; 15px; 15px);
        font-size: 1.6rem;
        max-width: 80%;
        text-align: center;
+       border: 1px solid @navigation-border;
+       @media @mobile {
+         margin: 0 auto;
+         max-width: 100%;
+         background-color: @eastern-blue;
+       }
       }
     }
   }
