--- a/css/index.css
+++ b/css/index.css
@@ -229,6 +229,14 @@ nav .nav-container .nav-links a {
 }
 .home header img {
   padding-bottom: 30px;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  -ms-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+.home header img:hover {
+  opacity: 0.5;
 }
 .home .content-section {
   margin: 30px 0;
@@ -262,6 +270,14 @@ nav .nav-container .nav-links a {
 }
 .home .content-section .img-content img {
   border-radius: 10px;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  -ms-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+.home .content-section .img-content img:hover {
+  opacity: 0.5;
 }
 @media (max-width: 500px) {
   .home .content-section .img-content img {
@@ -296,6 +312,14 @@ nav .nav-container .nav-links a {
 }
 .home .content-destination img {
   border-radius: 10px;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  -ms-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+.home .content-destination img:hover {
+  opacity: 0.5;
 }
 .home .content-pick {
   padding-top: 30px;
@@ -329,6 +353,14 @@ nav .nav-container .nav-links a {
   max-width: 80%;
   text-align: center;
   border: 1px solid #C0C0C0;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.home .content-pick .destination .btn:hover {
+  background-color: hsl(40, 90%, 50%);
 }
 @media (max-width: 500px) {
   .home .content-pick .destination .btn {
