--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,3 +6,11 @@
     padding: @padding;
     border-radius: @radius;
 }
+
+.transition (@prop: all, @time: 1s, @ease: linear) {
+	-webkit-transition: @prop @time @ease;
+	-moz-transition: @prop @time @ease;
+	-o-transition: @prop @time @ease;
+	-ms-transition: @prop @time @ease;
+	transition: @prop @time @ease;
+}
